@@ -68,6 +68,31 @@ $EXE +proj=latlong +ellps=clrk66 +nadgrids=conus \
 79d58'00.000"W 36d58'00.000"N 0.0
 EOF
 #
+echo "##############################################################" >> ${OUT}
+echo "Test that we use grid shift files even if we are right on the" >> ${OUT}
+echo "edge or even a wee bit outside (#141)."  >> ${OUT}
+#
+# Our test points are (1) right on mesh corner, (2) outside but within 
+# epsilon (3) inside a bit (4) outside by more than epsilon
+#
+$EXE +proj=latlong +ellps=WGS84 +nadgrids=ntf_r93.gsb \
+ +to +proj=latlong +datum=WGS84 \
+ -E -f "%.12f" >>${OUT} <<EOF
+-5.5 52.0
+-5.5000000000001 52.0000000000001
+-5.4999 51.9999
+-5.5001 52.0
+EOF
+#
+$EXE +proj=latlong +datum=WGS84 \
+ +to +proj=latlong +ellps=WGS84 +nadgrids=ntf_r93.gsb \
+ -E -f "%.12f" >>${OUT} <<EOF
+-5.5 52.0
+-5.5000000000001 52.0000000000001
+-5.4999 51.9999
+-5.5001 52.0
+EOF
+#
 ##############################################################################
 # Done! 
 # do 'diff' with distribution results
